# simpleQt

./: .gitignore  CMakeLists.txt  README.md  simpleQt.cpp  simpleQt.pro
